--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.5",
-    "expo-router": "^3.1.0",
+    "expo-router": "^3.5.24",
     "expo-splash-screen": "~0.29.21",
     "expo-sqlite": "~15.1.2",
     "expo-status-bar": "~2.0.1",
@@ -50,7 +50,9 @@
     "jest": "^29.2.1",
     "jest-expo": "~52.0.3",
     "react-test-renderer": "18.3.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "eslint": "^8.57.0",
+    "eslint-config-expo": "~8.0.1"
   },
   "private": true
 }
