--- a/package.json
+++ b/package.json
@@ -9,14 +9,40 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^7.2.1",
+    "@react-navigation/drawer": "^7.1.2",
+    "@react-navigation/native": "^7.0.15",
+    "@react-navigation/stack": "^7.1.2",
+    "date-fns": "^4.1.0",
     "expo": "~52.0.38",
+    "expo-camera": "^16.0.18",
+    "expo-file-system": "^18.0.11",
+    "expo-image-manipulator": "^13.0.6",
+    "expo-image-picker": "^16.0.6",
+    "expo-location": "^18.0.7",
+    "expo-media-library": "^17.0.6",
+    "expo-print": "^14.0.3",
+    "expo-sharing": "^13.0.1",
+    "expo-sqlite": "^15.1.2",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native": "0.76.7"
+    "react-native": "0.76.7",
+    "react-native-maps": "^1.20.1",
+    "react-native-paper": "^5.13.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
+    "@typescript-eslint/eslint-plugin": "^8.26.1",
+    "@typescript-eslint/parser": "^8.26.1",
+    "eslint": "^9.22.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-react": "^7.37.4",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "jest": "^29.7.0",
+    "prettier": "^3.5.3",
     "typescript": "^5.3.3"
   },
   "private": true
