--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/react": "~18.3.12",
     "@typescript-eslint/eslint-plugin": "^8.26.1",
     "@typescript-eslint/parser": "^8.26.1",
+    "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^9.22.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.3",
