--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     ]
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-navigation/bottom-tabs": "^7.2.1",
     "@react-navigation/drawer": "^7.1.2",
     "@react-navigation/native": "^7.0.15",
@@ -40,7 +41,7 @@
     "expo-file-system": "^18.0.11",
     "expo-image-manipulator": "^13.0.6",
     "expo-image-picker": "^16.0.6",
-    "expo-location": "^18.0.7",
+    "expo-location": "^18.0.8",
     "expo-media-library": "^17.0.6",
     "expo-print": "^14.0.3",
     "expo-sharing": "^13.0.1",
@@ -48,7 +49,8 @@
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.7",
-    "react-native-maps": "^1.20.1",
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-maps": "1.18.0",
     "react-native-paper": "^5.13.1",
     "uuid": "^11.1.0"
   },
@@ -63,6 +65,7 @@
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.2.0",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "prettier": "^3.5.3",
     "typescript": "^5.3.3"
