--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "expo-file-system": "^18.0.11",
     "expo-image-manipulator": "^13.0.6",
     "expo-image-picker": "^16.0.6",
+    "expo-linking": "^7.0.5",
     "expo-location": "^18.0.8",
     "expo-media-library": "^17.0.6",
     "expo-print": "^14.0.3",
@@ -49,6 +50,7 @@
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-calendars": "^1.1310.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-maps": "1.18.0",
     "react-native-paper": "^5.13.1",
