--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "date-fns": "^4.1.0",
     "expo": "~52.0.38",
     "expo-app-loading": "^2.1.1",
+    "expo-background-fetch": "^13.0.5",
     "expo-camera": "^16.0.18",
     "expo-crypto": "^14.0.2",
     "expo-file-system": "^18.0.11",
@@ -49,6 +50,7 @@
     "expo-sharing": "^13.0.1",
     "expo-sqlite": "^15.1.2",
     "expo-status-bar": "~2.0.1",
+    "expo-task-manager": "^12.0.5",
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-calendars": "^1.1310.0",
@@ -60,6 +62,9 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@eslint/compat": "^1.2.7",
+    "@eslint/eslintrc": "^3.3.0",
+    "@eslint/js": "^9.22.0",
     "@types/date-fns": "^2.5.3",
     "@types/react": "~18.3.12",
     "@typescript-eslint/eslint-plugin": "^8.26.1",
@@ -70,6 +75,8 @@
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-native": "^5.0.0",
+    "globals": "^16.0.0",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
     "prettier": "^3.5.3",
