--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "typescript": "tsc --noEmit",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "test": "jest",
-    "prepare": "husky install",
     "pre-commit": "lint-staged",
     "build:android": "eas build --platform android --profile preview",
-    "build:production": "eas build --platform android --profile production"
+    "build:production": "eas build --platform android --profile production",
+    "prepare": "husky"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
@@ -39,6 +39,7 @@
     "expo-background-fetch": "^13.0.5",
     "expo-camera": "^16.0.18",
     "expo-crypto": "^14.0.2",
+    "expo-dev-client": "~5.0.14",
     "expo-file-system": "^18.0.11",
     "expo-image-manipulator": "^13.0.6",
     "expo-image-picker": "^16.0.6",
@@ -48,6 +49,7 @@
     "expo-notifications": "^0.29.14",
     "expo-print": "^14.0.3",
     "expo-sharing": "^13.0.1",
+    "expo-splash-screen": "~0.29.22",
     "expo-sqlite": "^15.1.2",
     "expo-status-bar": "~2.0.1",
     "expo-task-manager": "^12.0.5",
@@ -55,9 +57,13 @@
     "react-native": "0.76.7",
     "react-native-calendars": "^1.1310.0",
     "react-native-file-access": "^3.1.1",
+    "react-native-gesture-handler": "^2.24.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-maps": "1.18.0",
     "react-native-paper": "^5.13.1",
+    "react-native-safe-area-context": "^5.3.0",
+    "react-native-screens": "^4.9.2",
+    "react-navigation": "^5.0.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
