--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "typescript": "tsc --noEmit",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "test": "jest",
-    "pre-commit": "lint-staged",
     "build:android": "eas build --platform android --profile preview",
     "build:production": "eas build --platform android --profile production",
     "prepare": "husky"
@@ -34,7 +33,7 @@
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/stack": "^7.1.2",
     "date-fns": "^4.1.0",
-    "expo": "~52.0.38",
+    "expo": "^52.0.40",
     "expo-app-loading": "^2.1.1",
     "expo-background-fetch": "^13.0.5",
     "expo-camera": "^16.0.18",
@@ -57,12 +56,14 @@
     "react-native": "0.76.7",
     "react-native-calendars": "^1.1310.0",
     "react-native-file-access": "^3.1.1",
-    "react-native-gesture-handler": "^2.24.0",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-maps": "1.18.0",
     "react-native-paper": "^5.13.1",
-    "react-native-safe-area-context": "^5.3.0",
-    "react-native-screens": "^4.9.2",
+    "react-native-reanimated": "~3.16.7",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "react-native-webview": "13.12.5",
     "react-navigation": "^5.0.0",
     "uuid": "^11.1.0"
   },
@@ -72,6 +73,7 @@
     "@eslint/eslintrc": "^3.3.0",
     "@eslint/js": "^9.22.0",
     "@types/date-fns": "^2.5.3",
+    "@types/jest": "^29.5.14",
     "@types/react": "~18.3.12",
     "@typescript-eslint/eslint-plugin": "^8.26.1",
     "@typescript-eslint/parser": "^8.26.1",
@@ -85,6 +87,7 @@
     "globals": "^16.0.0",
     "husky": "^9.1.7",
     "jest": "^29.7.0",
+    "lint-staged": "^15.5.0",
     "prettier": "^3.5.3",
     "typescript": "^5.3.3"
   },
