--- a/package.json
+++ b/package.json
@@ -53,17 +53,17 @@
     "expo-status-bar": "~2.0.1",
     "expo-task-manager": "^12.0.5",
     "react": "18.3.1",
-    "react-native": "0.76.7",
+    "react-native": "~0.77.1",
     "react-native-calendars": "^1.1310.0",
     "react-native-file-access": "^3.1.1",
-    "react-native-gesture-handler": "~2.20.2",
+    "react-native-gesture-handler": "~2.22.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-maps": "1.18.0",
     "react-native-paper": "^5.13.1",
     "react-native-reanimated": "~3.16.7",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-webview": "13.12.5",
+    "react-native-safe-area-context": "~5.1.0",
+    "react-native-screens": "~4.8.0",
+    "react-native-webview": "~13.13.1",
     "react-navigation": "^5.0.0",
     "uuid": "^11.1.0"
   },
@@ -91,5 +91,17 @@
     "prettier": "^3.5.3",
     "typescript": "^5.3.3"
   },
-  "private": true
+  "private": true,
+  "expo": {
+    "install": {
+      "exclude": [
+        "react-native@~0.76.6",
+        "react-native-reanimated@~3.16.1",
+        "react-native-gesture-handler@~2.20.0",
+        "react-native-screens@~4.4.0",
+        "react-native-safe-area-context@~4.12.0",
+        "react-native-webview@~13.12.5"
+      ]
+    }
+  }
 }
