--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "react-native-screens": "~4.8.0",
     "react-native-webview": "~13.13.1",
     "react-navigation": "^5.0.0",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "expo-system-ui": "~4.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
